@@ -10,6 +10,7 @@ Version 1.4.5 - CVS
   - Add support for Mail-Followup-To header, from devel.
   - Remove is_readable($data_dir) test in configtest, because SquirrelMail
     functions fine with stricter permissions.
+  - 24hr clock format should include a leading 0.
 
 Version 1.4.4 - 21 January 2005
 -------------------------------
